--- a/home.html
+++ b/home.html
@@ -61,6 +61,11 @@
 
         </main>
     </section>
+    <footer>
+        <div id="footer-marvel">
+            <p>Direitos reservados a Marvel Comics</p>
+        </div>
+    </footer>
     <script src="js/app.js"></script>
 </body>
 
