--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
                 </ul>
 
                 <img src="img/botao_login.png" alt="login" id="back-botao-login">
-                <button id="btn-login" type="button">Login</button>
+                <button id="btn-login" type="button">Olá Grupo1</button>
             </nav>
         </header>
 
