Animação sobreposição das hqs

--- a/home.html
+++ b/home.html
@@ -60,12 +60,13 @@
             </div>
 
         </main>
+        <footer>
+            <div id="footer-marvel">
+                <a href="https://www.marvel.com/"><p>Direitos reservados a Marvel Comics</p></a>
+            </div>
+        </footer>
     </section>
-    <footer>
-        <div id="footer-marvel">
-            <p>Direitos reservados a Marvel Comics</p>
-        </div>
-    </footer>
+
     <script src="js/app.js"></script>
 </body>
 
