Implementação barra de pesquisa

--- a/home.html
+++ b/home.html
@@ -46,6 +46,7 @@
 
         <main>
             <div id="img-cabecalho-main"></div>
+            <input type="text" name="pesquisa" id="pesquisa" placeholder="Pesquisa">
             <div id="header-novidades">
                 <p class="header-novidades">Novidades</p>
                 <a href="google.com" class="header-novidades">Veja Mais</a>
