Hq Clicavel superman com direcionamento

--- a/home.html
+++ b/home.html
@@ -55,6 +55,7 @@
                 <img src="img/hqs/53.jpg" alt="">
                 <img src="img/hqs/aquaman-hq.jpg" alt="">
                 <img src="img/hqs/capas9.jpg" alt="">
+                <img src="img/hqs/Super-man  cover.jpg" alt="" id="hq-superman">
                 <img src="img/hqs/deadpool-cable-split-second.jpg" alt="">
                 <img src="img/hqs/images.jpg" alt="">
                 <img src="img/hqs/unnamed.jpg" alt=""> 
