Cabeçalho pagina de descricao

--- a/Space_Comics - Copia/index.html
+++ b/Space_Comics - Copia/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header>
+    <!--<header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow rounded fixed navegation">
             <a class="navbar-brand" href="#">
                 <img src="img/LOGO2.png" width="90" height="30" alt="" loading="lazy" />
@@ -39,7 +39,39 @@
                 </span>
             </div>
         </nav>
+    </header>-->
+
+    
+    <header>
+        <nav>
+            <img src="img/logo.png" alt="logo" id="logo-header">
+            <ul id="cabecalho">
+
+                <div class="dropdown">
+                    <button class="dropbtn">Categorias</button>
+                        <div class="dropdown-content">
+                            <a href="#">Acao</a>
+                            <a href="#">Comédia</a>
+                            <a href="#">Romance</a>
+                            <a href="#">Drama</a>
+                            <a href="#">Terror</a>
+                        </div>
+                </div>
+
+                </li>
+                <li>Lançamentos</li>
+                <li>Sobre</li>
+                <li>Contato</li>
+            </ul>
+
+            <img src="img/botao_login.png" alt="login" id="back-botao-login">
+            <button id="btn-login" type="button">Olá Grupo1</button>
+        </nav>
     </header>
+
+
+
+
     <br>
     <button type="button" class="close text-white fechar mr-3" aria-label="Close">
         <span aria-hidden="true">&times;</span>
