coloquei o icone do foguete na home ,  troquei a cor e tirei o text decorantion do dropdown-content da descricao

--- a/Space_Comics - Copia/index.html
+++ b/Space_Comics - Copia/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="sortcut icon" href="img/LOGO2 - Copia.png" type="image/x-icon" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
     <title>Space Comics</title>
@@ -49,8 +49,8 @@
 
                 <div class="dropdown">
                     <button class="dropbtn">Categorias</button>
-                        <div class="dropdown-content">
-                            <a href="#">Acao</a>
+                        <div class="rounded-bottom dropdown-content">
+                            <a href="#">Ação</a>
                             <a href="#">Comédia</a>
                             <a href="#">Romance</a>
                             <a href="#">Drama</a>
