--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Comic</title>
+    <link rel="sortcut icon" href="img/LOGO2 - Copia.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css">
 
     <script language="JavaScript">
