direcionamento ao clicar no logo e ajuste faixa do veja mais

--- a/home.html
+++ b/home.html
@@ -50,6 +50,7 @@
             <input type="text" name="pesquisa" id="pesquisa" placeholder="Pesquisa">
             <div id="header-novidades">
                 <p class="header-novidades">Novidades</p>
+                <div id="faixa"></div>
                 <a href="google.com" class="header-novidades">Veja Mais</a>
             </div>
             <div id="novidades-hqs">
