--- a/Space_Comics - Copia/index.html
+++ b/Space_Comics - Copia/index.html
@@ -113,8 +113,14 @@
                 </div>
             </div>
         </div>
+        
     </section>
-
+    
+    <footer>
+        <div id="footer-marvel">
+            <a href="https://www.marvel.com/"><p>Direitos reservados a Marvel Comics</p></a>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
