--- a/Space_Comics - Copia/index.html
+++ b/Space_Comics - Copia/index.html
@@ -41,7 +41,7 @@
         </nav>
     </header>-->
 
-    
+
     <header>
         <nav>
             <img src="img/logo.png" alt="logo" id="logo-header">
@@ -49,13 +49,13 @@
 
                 <div class="dropdown">
                     <button class="dropbtn">Categorias</button>
-                        <div class="rounded-bottom dropdown-content">
-                            <a href="#">Ação</a>
-                            <a href="#">Comédia</a>
-                            <a href="#">Romance</a>
-                            <a href="#">Drama</a>
-                            <a href="#">Terror</a>
-                        </div>
+                    <div class="rounded-bottom dropdown-content">
+                        <a href="#">Ação</a>
+                        <a href="#">Comédia</a>
+                        <a href="#">Romance</a>
+                        <a href="#">Drama</a>
+                        <a href="#">Terror</a>
+                    </div>
                 </div>
 
                 </li>
@@ -73,7 +73,7 @@
 
 
     <br>
-    <button type="button" class="close text-white fechar mr-3" aria-label="Close">
+    <button type="button" class="close text-white mr-3" id="fechar" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
     <br>
@@ -81,7 +81,7 @@
         <div class="container description text-white">
             <div class="row">
                 <div class="col-4 shadow">
-                    <img src="img/Super-man  cover.jpg" class="img-fluid" alt="Responsive image">
+                    <img src="img/Super-man  cover.jpg" class="img-fluid" alt="Responsive image" id="super-man">
                 </div>
                 <div class="col-8 rounded descrip-box">
                     <h1>SuperMan - The Death of Superman!</h1>
@@ -108,14 +108,13 @@
                     <img src="img/half-star.png" alt="half star" width="30" height="30">
                     <img src="img/star.white.png" alt="white star" width="30" height="30">
                     <br><br>
-                    <a href="#"><button type="button" class="btn btn-md text-white botao"><img src="img/book.png" alt="book"
-                                width="20" height="20"> Ler a HQ</button></a>
+                    <a href="#"><button type="button" class="btn btn-md text-white botao"><img src="img/book.png"
+                                alt="book" width="20" height="20"> Ler a HQ</button></a>
                 </div>
             </div>
         </div>
     </section>
-
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
@@ -125,6 +124,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
     </script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
