--- a/home.html
+++ b/home.html
@@ -54,13 +54,13 @@
                 <a href="google.com" class="header-novidades">Veja Mais</a>
             </div>
             <div id="novidades-hqs">
-                <img src="img/hqs/53.jpg" alt="">
-                <img src="img/hqs/aquaman-hq.jpg" alt="">
-                <img src="img/hqs/capas9.jpg" alt="">
-                <img src="img/hqs/superman.jpg" alt="" id="hqSuperman">
-                <img src="img/hqs/deadpool-cable-split-second.jpg" alt="">
-                <img src="img/hqs/images.jpg" alt="">
-                <img src="img/hqs/unnamed.jpg" alt=""> 
+                <img src="img/hqs/53.jpg" alt="" class="options">
+                <img src="img/hqs/aquaman-hq.jpg" alt="" class="options">
+                <img src="img/hqs/capas9.jpg" alt="" class="options">
+                <img src="img/hqs/superman.jpg" alt="" id="hqSuperman" class="options">
+                <img src="img/hqs/deadpool-cable-split-second.jpg" alt="" class="options">
+                <img src="img/hqs/images.jpg" alt="" class="options">
+                <img src="img/hqs/unnamed.jpg" alt="" class="options"> 
             </div>
 
         </main>
@@ -70,7 +70,7 @@
             </div>
         </footer>
     </section>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js"></script>
     <script src="js/app.js"></script>
 </body>
 
