--- a/login.html
+++ b/login.html
@@ -44,56 +44,65 @@
 			</ul>
 
 			<img src="img/botao_login.png" alt="login" id="back-botao-login">
-			<button id="btn-login" type="button">Login</button>
 		</nav>
 	</header>
-	
-		<div class="container-login" style="background: url(img/background.jpg);">
-			<div class="wrap-login">
-				<div class="login-pic">
-					<img src="img/imagem-form.jpg" alt="" width="480px" height="482px">
+
+	<main id="main-login">
+		<div id="img-cabecalho-main-login"></div>
+		
+		<div id="area-login">
+			<img src="img/imagem-form.jpg" alt="img-login">
+
+			<form class="login-form">
+				<span class="login-form-img">
+					<img src="img/logo2.png" alt="" width="160px" height="60px">
+				</span>
+
+				<div class="wrap-input validate-input">
+					<input class="input" type="text" name="email" placeholder="Digite seu e-mail">
+					<span class="symbol-input">
+						<i class="fa fa-envelope" aria-hidden="true"></i>
+					</span>
 				</div>
 
-				<form class="login-form">
-					<span class="login-form-img">
-						<img src="img/logo2.png" alt="" width="160px" height="60px">
+				<div class="wrap-input validate-input">
+					<input class="input" type="password" name="senha" placeholder="Digite sua senha">
+					<span class="symbol-input">
+						<i class="fa fa-lock" aria-hidden="true"></i>
 					</span>
+				</div>
 
-					<div class="wrap-input validate-input">
-						<input class="input" type="text" name="email" placeholder="Digite seu e-mail">
-						<span class="symbol-input">
-							<i class="fa fa-envelope" aria-hidden="true"></i>
-						</span>
-					</div>
+				<div class="form-check ml-4">
+					<input type="checkbox" class="form-check-input" id="exampleCheck1">
+					<label class="form-check-label" for="exampleCheck1">Lembrar-me</label>
+				</div>
 
-					<div class="wrap-input validate-input">
-						<input class="input" type="password" name="senha" placeholder="Digite sua senha">
-						<span class="symbol-input">
-							<i class="fa fa-lock" aria-hidden="true"></i>
-						</span>
-					</div>
+				<div class="container-login-form-btn">
+					<button class="login-form-btn">
+						<a href=""> Entrar </a>
+					</button>
+				</div>
 
-					<div class="form-check ml-4">
-						<input type="checkbox" class="form-check-input" id="exampleCheck1">
-						<label class="form-check-label" for="exampleCheck1">Lembrar-me</label>
-					</div>
+				<div class="text-center p-t-40">
+					<a class="txt2" href="#">
+						Create your Account
+						<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
+					</a>
+				</div>
+			</form>
 
-					<div class="container-login-form-btn">
-						<button class="login-form-btn">
-							<a href=""> Entrar </a>
-						</button>
-					</div>
-
-					<div class="text-center p-t-40">
-						<a class="txt2" href="#">
-							Create your Account
-							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
-						</a>
-					</div>
-				</form>
-			</div>
 		</div>
-	
+		
+	</main>
+
+	<footer>
+		<div id="footer-marvel">
+			<a href="https://www.marvel.com/"><p>Direitos reservados a Marvel Comics</p></a>
+		</div>
+	</footer>
+</section>
+
+
 	</section>
 
 
