adicianado mais conteudo ao footer

--- a/login.html
+++ b/login.html
@@ -97,7 +97,18 @@
 
 	<footer>
 		<div id="footer-marvel">
-			<a href="https://www.marvel.com/"><p>Direitos reservados a Marvel Comics</p></a>
+			<div class="img-celular"><img src="img/celularhq.png" width="400px">
+			<p>Disponivel no seu celular</p>
+			</div>
+			<div class="img-notebook"><img src="img/notebookhq.png" width="400px">
+			<p>Disponivel no seu pc</p>
+			</div>
+			<ul>
+				<li><a href="https://www.marvel.com/">Direitos reservados a Marvel Comics</a></li>
+				<li><a href="#">Termos de Uso</a></li>
+				<li><a href="#">FAQ</a></li>
+				<li><a href="#">Politica de privacidade</a></li>
+			</ul>
 		</div>
 	</footer>
 </section>
