Ajuste do footer (home login cadastro)

--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
 </script>
 </head>
 <body>
-<section>
+<section id="principal">
 	
 	<header>
 		<nav>
@@ -95,6 +95,11 @@
 		
 	</main>
 
+</section>
+
+
+
+<section id="secundaria">
 	<footer>
 		<div id="footer-marvel">
 			<div class="img-celular"><img src="img/celularhq.png" width="400px">
@@ -109,13 +114,10 @@
 				<li><a href="#">FAQ</a></li>
 				<li><a href="#">Politica de privacidade</a></li>
 			</ul>
+			
 		</div>
 	</footer>
 </section>
-
-
-	</section>
-
 
 <!--===============================================================================================-->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
