--- a/create.html
+++ b/create.html
@@ -36,7 +36,14 @@
 				</span>
 
 				<div class="wrap-input validate-input">
-					<input class="input" type="text" name="email" placeholder="Insira um e-mail">
+					<input class="input" type="text" name="user" placeholder="Nome de usuário">
+					<span class="symbol-input">
+						<i class="fa fa-envelope" aria-hidden="true"></i>
+					</span>
+				</div>
+
+				<div class="wrap-input validate-input">
+					<input class="input" type="email" name="email" placeholder="Insira um e-mail">
 					<span class="symbol-input">
 						<i class="fa fa-envelope" aria-hidden="true"></i>
 					</span>
@@ -51,25 +58,20 @@
                 
 				<div class="container-login-form-btn">
 					<button class="login-form-btn">
-						<a href=""> Entrar </a>
+						<a href=""> Cadastar </a>
 					</button>
 				</div>
 
-				<div class="text-center p-t-40">
-					<a href="login.html" class="txt2" href="#">
-						Volte e Logue na sua conta
-						<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
-					</a>
-				</div>
+				
 			</form>
 
 		</div>
 		
 	</main>
 
-	<footer>
-		<div id="footer-marvel">
-			<a href="https://www.marvel.com/"><p>Direitos reservados a Marvel Comics</p></a>
+	<footer style="height: 10vh; width: 100%;">
+		<div id="footer-marvel" style="height: 10vh; width: 100%;display: flex; align-items: center; justify-content: center;">
+			<a href="https://www.marvel.com/" style="margin: 50px 0 0 0;"><p>Direitos reservados a Marvel Comics</p></a>
 		</div>
 	</footer>
 </section>
