--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <section>
+    <section id="principal">
 
         <header>
             <nav>
@@ -45,7 +45,7 @@
             </nav>
         </header>
 
-        <main>
+       <main>
             <div id="img-cabecalho-main"></div>
             <input type="text" name="pesquisa" id="pesquisa" placeholder="Pesquisa">
             <div id="header-novidades">
@@ -64,8 +64,10 @@
             </div>
 
         </main>
-        <footer>
+    </section>
 
+    <section id="secundaria">
+        <footer>
             <div id="footer-marvel">
                 <div class="img-celular"><img src="img/celularhq.png" width="400px">
                 <p>Disponivel no seu celular</p>
@@ -80,10 +82,10 @@
                     <li><a href="#">Politica de privacidade</a></li>
                 </ul>
                 
-                
             </div>
         </footer>
     </section>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js"></script>
     <script src="js/app.js"></script>
 </body>
