alteração feita do home

--- a/login.html
+++ b/login.html
@@ -24,26 +24,9 @@
 	<header>
 		<nav>
 			<img src="img/logo.png" alt="logo" id="logo-header">
-			<ul id="cabecalho">
+			<ul id="cabecalho"></ul>
 
-				<div class="dropdown">
-					<button class="dropbtn">Categorias</button>
-						<div class="dropdown-content">
-							<a href="#">Acao</a>
-							<a href="#">Comédia</a>
-							<a href="#">Romance</a>
-							<a href="#">Drama</a>
-							<a href="#">Terror</a>
-						</div>
-				</div>
-
-				</li>
-				<li>Lançamentos</li>
-				<li>Sobre</li>
-				<li>Contato</li>
-			</ul>
-
-			<img src="img/botao_login.png" alt="login" id="back-botao-login">
+			
 		</nav>
 	</header>
 
@@ -78,13 +61,13 @@
 				</div>
 
 				<div class="container-login-form-btn">
-					<button class="login-form-btn">
-						<a href=""> Entrar </a>
+					<button class="login-form-btn" id="btn-login">
+						<a href="home.html"> Entrar </a>
 					</button>
 				</div>
 
 				<div class="text-center p-t-40">
-					<a class="txt2" href="#">
+					<a class="txt2" href="create.html">
 						Create your Account
 						<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 					</a>
