Alteração layout home

--- a/home.html
+++ b/home.html
@@ -46,6 +46,20 @@
                     <li>Contato</li>
                 </ul>
 
+
+                
+                <ul id="cabecalho-modal-menu">
+                    <div class="dropdown-modal">
+                        <button class="dropbtn-modal">Menu</button>
+                            <div class="dropdown-content-modal">
+                                <a href="#">Categorias</a>
+                                <a href="#">Lançamentos</a>
+                                <a href="#">Sobre</a>
+                                <a href="#">Contato</a>
+                                <a href="#">Login</a>
+                            </div>
+                    </div>
+                </ul>
                 
                <button id="btn-login" type="button"><a href="login.html"> Login </a></button>
             </nav>
@@ -88,7 +102,9 @@
 
         <section>
             <div id="segundo-bloco-home">
-                fdsagfgfdsgfsdgfds
+                <h2>Não encontrou o que procurava? </h2>
+                <input type="text" name="pesquisa" id="pesquisa" placeholder="Pesquise">
+                <button type="button">Buscar</button>
             </div>
         </section>
 
