Alteração menu responsivo

--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
                                 <a href="#">Lançamentos</a>
                                 <a href="#">Sobre</a>
                                 <a href="#">Contato</a>
-                                <a href="#">Login</a>
+                                <a href="login.html" style="background-color: #891818; color: white; text-align: center;">Login</a>
                             </div>
                     </div>
                 </ul>
