--- a/Space_Comics - Copia/index.html
+++ b/Space_Comics - Copia/index.html
@@ -25,6 +25,7 @@
                         <a href="#">Romance</a>
                         <a href="#">Drama</a>
                         <a href="#">Terror</a>
+
                     </div>
                 </div>
 
@@ -33,22 +34,37 @@
                 <li>Sobre</li>
                 <li>Contato</li>
             </ul>
-            <button id="btn-login" type="button">Olá Grupo1</button>
+
+            <ul id="cabecalho-modal-menu">
+                <div class="dropdown-modal">
+                    <button class="dropbtn-modal">Menu</button>
+                    <div class="dropdown-content-modal">
+                        <a href="#">Categorias</a>
+                        <a href="#">Lançamentos</a>
+                        <a href="#">Sobre</a>
+                        <a href="#">Contato</a>
+                        <a href="../login.html"
+                            style="background-color: #891818; color: white; text-align: center;" id="dropdown-login">Login</a>
+                    </div>
+                </div>
+            </ul>
+
+            <a href="../login.html" class="text-white"><button id="btn-login" type="button">Login</button></a>
         </nav>
     </header>
     <br>
-        <button type="button" class="close text-white mr-3" id="fechar" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
+    <button type="button" class="close text-white mr-3" id="fechar" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
     <br><br>
     <br>
     <section>
         <div class="container description text-white">
             <div class="row">
-                <div class="col-4 shadow">
+                <div class="col-md-4 col-sm-12 image">
                     <img src="img/Super-man  cover.jpg" class="img-fluid" alt="Responsive image" id="super-man">
                 </div>
-                <div class="col-8 rounded descrip-box">
+                <div class="col-md-8 col-sm-12 rounded descrip-box">
                     <h1>SuperMan - The Death of Superman!</h1>
                     <p class="d-inline details">Outubro de 1993 •</p>
                     <p class="d-inline details">160 Páginas •</p>
@@ -67,24 +83,30 @@
                         Jon Bogdanove e Jackson Guice(desenhos) Bret Breeding, Dennis Janke, Doug Hazlewood e Denis
                         Rodier (arte-final).
                     </p>
-                    <img src="img/star.png" alt="star" width="30" height="30">
-                    <img src="img/star.png" alt="star" width="30" height="30">
-                    <img src="img/star.png" alt="star" width="30" height="30">
-                    <img src="img/half-star.png" alt="half star" width="30" height="30">
-                    <img src="img/star.white.png" alt="white star" width="30" height="30">
+                    <div class="stars">
+                        <img src="img/star.png" alt="star" width="30" height="30">
+                        <img src="img/star.png" alt="star" width="30" height="30">
+                        <img src="img/star.png" alt="star" width="30" height="30">
+                        <img src="img/half-star.png" alt="half star" width="30" height="30">
+                        <img src="img/star.white.png" alt="white star" width="30" height="30">
+                    </div>
                     <br><br>
-                    <a href="#"><button type="button" class="btn btn-md text-white botao"><img src="img/book.png"
-                                alt="book" width="20" height="20"> Ler a HQ</button></a>
+                    <div class="leitura">
+                        <a href="#"><button type="button" class="btn btn-md text-white botao"><img src="img/book.png"
+                            alt="book" width="20" height="20" id="icon-book"> Ler a HQ</button></a>
+                        </div>
                 </div>
             </div>
         </div>
     </section>
-<footer>
-    <div id="footer-marvel">
-        <a href="https://www.marvel.com/"><p>Direitos reservados a Marvel Comics</p></a>
-    </div>
-</footer>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js"></script>
+    <footer>
+        <div id="footer-marvel">
+            <a href="https://www.marvel.com/">
+                <p>Direitos reservados a Marvel Comics</p>
+            </a>
+        </div>
+    </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
