--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
 	
 	<header>
 		<nav>
-			<img src="img/logo.png" alt="logo" id="logo-header">
+			<a href="home.html"><img src="img/logo.png" alt="logo" id="logo-header"></a>
 			<ul id="cabecalho"></ul>
 
 			
