--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <section id="principal">
+    <section id="principal" class="section-principal">
 
         <header>
             <nav>
