--- a/Space_Comics - Copia/index.html
+++ b/Space_Comics - Copia/index.html
@@ -62,10 +62,10 @@
         <div class="container description text-white">
             <div class="row">
                 <div class="col-md-4 col-sm-12 image">
-                    <img src="img/provisorio.png" class="img-fluid" alt="Responsive image" id="super-man">
+                    <img src="#" class="img-fluid" alt="Responsive image" id="super-man">
                 </div>
                 <div class="col-md-8 col-sm-12 rounded descrip-box">
-                    <h1>SuperMan - The Death of Superman!</h1>
+                    <h1 id="titleHQ">SuperMan - The Death of Superman!</h1>
                     <p class="d-inline details">Outubro de 1993 •</p>
                     <p class="d-inline details">160 Páginas •</p>
                     <p class="d-inline details">DC Comics</p>
@@ -117,7 +117,6 @@
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
     </script>
     <script src="js/app.js"></script>
-    <script src="../js/api.js"></script>
 </body>
 
 </html>
