--- a/Space_Comics - Copia/index.html
+++ b/Space_Comics - Copia/index.html
@@ -31,8 +31,7 @@
 
                 </li>
                 <li>Lançamentos</li>
-                <li>Sobre</li>
-                <li>Contato</li>
+               <a href="../sobre.html"><li>Sobre</li></a>
             </ul>
 
             <ul id="cabecalho-modal-menu">
@@ -41,8 +40,7 @@
                     <div class="dropdown-content-modal">
                         <a href="#">Categorias</a>
                         <a href="#">Lançamentos</a>
-                        <a href="#">Sobre</a>
-                        <a href="#">Contato</a>
+                        <a href="../sobre.html">Sobre</a>
                         <a href="../login.html"
                             style="background-color: #891818; color: white; text-align: center;" id="dropdown-login">Login</a>
                     </div>
