--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
                     <div class="dropdown">
                         <button class="dropbtn">Categorias</button>
                             <div class="dropdown-content">
-                                <a href="#">Acao</a>
+                                <a href="#">Ação</a>
                                 <a href="#">Comédia</a>
                                 <a href="#">Romance</a>
                                 <a href="#">Drama</a>
@@ -42,8 +42,7 @@
 
                     </li>
                     <li>Lançamentos</li>
-                    <li>Sobre</li>
-                    <li>Contato</li>
+                   <a href="sobre.html"><li>Sobre</li></a>
                 </ul>
 
 
@@ -54,14 +53,13 @@
                             <div class="dropdown-content-modal">
                                 <a href="#">Categorias</a>
                                 <a href="#">Lançamentos</a>
-                                <a href="#">Sobre</a>
-                                <a href="#">Contato</a>
+                                <a href="sobre.html">Sobre</a>
                                 <a href="login.html" style="background-color: #891818; color: white; text-align: center;">Login</a>
                             </div>
                     </div>
                 </ul>
                 
-               <button id="btn-login" type="button"><a href="login.html"> Login </a></button>
+                <a href="login.html"><button id="btn-login" type="button"> Login </button></a>
             </nav>
         </header>
 
