Informações Matheus Page Sobre

--- a/sobre.html
+++ b/sobre.html
@@ -21,19 +21,7 @@
                 <img src="img/logo.png" alt="logo" id="logo-header">
                 <ul id="cabecalho">
 
-                    <div class="dropdown">
-                        <button class="dropbtn">Categorias</button>
-                        <div class="dropdown-content">
-                            <a href="#">Ação</a>
-                            <a href="#">Comédia</a>
-                            <a href="#">Romance</a>
-                            <a href="#">Drama</a>
-                            <a href="#">Terror</a>
-                        </div>
-                    </div>
-
-                    </li>
-                    <li>Lançamentos</li>
+                    <li>Home</li>
                     <li>Sobre</li>
                 </ul>
 
@@ -100,8 +88,20 @@
                     <div class="conatiner">
                         <div class="row integrante-all">
                             <div class="col-md-4 col-sm-6 mx-5 my-4 rounded shadow integrante">
-                                <h3 class="text-white">NOME</h3>
-                                <img src="img/modo-anonimo.png" alt="Integrante" width="380" height="200"
+                                <h3 class="text-white" id="nome-integrante">Matheus Vasconcelos</h3>
+                                <img src="img/matheus2.png" alt="Integrante" width="200" height="200"
+                                    class="imagem-int">
+                                <p class="text-white">"Matheus Vasconcelos é estudante de Ciência da computação
+				 na universidade Anhembi Morumbi. Com fortes conhecimentos em linguagens de programação com ênfase em Python aplicado ao Data 
+				 Science e Machine Learning. Busca o aprendizado no desenvolvimento web com o intuito de aprimorar o conhecimento e descobrir 
+				 novos ambientes de aplicação para ciências tecnologicas."</p>
+                                <a href="https://www.linkedin.com/in/matheusvasc/" class="px-2 pb-2"><img src="img/linkedin.png" alt="" width="30"
+                                        height="30" class="social-media"></a>
+                                <a href="https://github.com/TheusVask" class="px-2 pb-2"><img src="img/git.png" alt="" width="30" height="30" class="social-media"></a>
+                            </div>
+                            <div class="col-md-4 mx-5 my-5 rounded shadow integrante">
+                                <h3 class="text-white" id="nome-integrante">NOME</h3>
+                                <img src="img/modo-anonimo.png" alt="Integrante" width="200" height="200"
                                     class="imagem-int">
                                 <p class="text-white">uis eu nisi ullamcorper lorem consectetur pulvinar et at arcu.
                                     Maecenas ac rhoncus
@@ -112,20 +112,8 @@
                                 <a href="#" class="px-2 pb-2"><img src="img/git.png" alt="" width="30" height="30" class="social-media"></a>
                             </div>
                             <div class="col-md-4 mx-5 my-5 rounded shadow integrante">
-                                <h3 class="text-white">NOME</h3>
-                                <img src="img/modo-anonimo.png" alt="Integrante" width="380" height="200"
-                                    class="imagem-int">
-                                <p class="text-white">uis eu nisi ullamcorper lorem consectetur pulvinar et at arcu.
-                                    Maecenas ac rhoncus
-                                    ex. Suspendisse potenti. Suspendisse porta non massa tincidunt scelerisque. Integer
-                                    sagittis nisl at eleifen</p>
-                                <a href="#" class="px-2 pb-2"><img src="img/linkedin.png" alt="" width="30"
-                                        height="30" class="social-media"></a>
-                                <a href="#" class="px-2 pb-2"><img src="img/git.png" alt="" width="30" height="30" class="social-media"></a>
-                            </div>
-                            <div class="col-md-4 mx-5 my-5 rounded shadow integrante">
-                                <h3 class="text-white">NOME</h3>
-                                <img src="img/modo-anonimo.png" alt="Integrante" width="380" height="200"
+                                <h3 class="text-white" id="nome-integrante">NOME</h3>
+                                <img src="img/modo-anonimo.png" alt="Integrante" width="200" height="200"
                                     class="imagem-int">
                                 <p class="text-white">uis eu nisi ullamcorper lorem consectetur pulvinar et at arcu.
                                     Maecenas ac rhoncus
@@ -136,8 +124,8 @@
                                 <a href="#" class="px-2 pb-2"><img src="img/git.png" alt="" width="30" height="30" class="social-media"></a>
                             </div>
                             <div class="col-md-4 mx-5 my-4 rounded shadow integrante">
-                                <h3 class="text-white">NOME</h3>
-                                <img src="img/modo-anonimo.png" alt="Integrante" width="380" height="200"
+                                <h3 class="text-white" id="nome-integrante">NOME</h3>
+                                <img src="img/modo-anonimo.png" alt="Integrante" width="200" height="200"
                                     class="imagem-int">
                                 <p class="text-white">uis eu nisi ullamcorper lorem consectetur pulvinar et at arcu.
                                     Maecenas ac rhoncus
@@ -149,8 +137,8 @@
                                             height="30" class="social-media"></a>
                             </div>
                             <div class="col-md-4 mx-5 my-5 px-4 rounded shadow integrante">
-                                <h3 class="text-white">João Victor</h3>
-                                <img src="img/circulo-jv.png" alt="Integrante" width="200" height="200"
+                                <h3 class="text-white" id="nome-integrante">João Victor</h3>
+                                <img src="img/circulo-jv2.png" alt="Integrante" width="200" height="200"
                                     class="imagem-int">
                                 <p class="text-white">" João Victor Araújo Costa é um aluno recém descoberto pelo o mundo da tecnologia e , principalmente, da programação. Estudante de Engenharia da Computação na UFG ( Universidade Federal de Goiás) e um pequeno Developer em desenvolvimento"
                                 </p>
