--- a/Space_Comics - Copia/index.html
+++ b/Space_Comics - Copia/index.html
@@ -90,12 +90,50 @@
                     </div>
                     <br><br>
                     <div class="leitura">
-                        <a href="#"><button type="button" class="btn btn-md text-white botao"><img src="img/book.png"
+                        <a href="#"><button type="button" class="btn btn-info btn-lg bg-danger" data-toggle="modal" data-target="#myModal" ><img src="img/book.png"
                             alt="book" width="20" height="20" id="icon-book"> Ler a HQ</button></a>
+
                         </div>
                 </div>
             </div>
         </div>
+
+
+
+
+
+    <div class="container" style="z-index: 200">
+
+
+        <div id="myModal" class="modal fade" role="dialog">
+            <div class="modal-dialog modal-lg">
+
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">HQ</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">
+
+                        <embed src="Lorem.pdf" frameborder="0" width="100%" height="400px">
+
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
     </section>
     <footer>
         <div id="footer-marvel">
