Modificações Sobre. Caio!

--- a/sobre.html
+++ b/sobre.html
@@ -55,22 +55,7 @@
                 <div class=" descrip-sobre">
                     <div class="container rounded site">
                         <h1 class="text-white bloco-in">O site</h1>
-                        <p class="text-white bloco-out">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
-                            maximus mi
-                            malesuada risus luctus pellentesque. Sed sit amet est ut magna bibendum sollicitudin. Morbi
-                            eget
-                            ligula at nisl ornare faucibus. Donec tincidunt iaculis convallis. Donec ex magna, malesuada
-                            sit
-                            amet sodales in, vestibulum nec massa. Donec ac nunc sit amet turpis sagittis volutpat nec
-                            eu
-                            diam. Fusce urna urna, ultricies in efficitur bibendum, blandit in est. Ut sit amet ultrices
-                            nisl. Proin blandit quis est ac mattis. Phasellus eleifend eleifend dolor, iaculis lobortis
-                            velit tristique id. Duis maximus id tellus eu scelerisque. Ut tortor mauris, mollis non
-                            gravida
-                            id, commodo laoreet massa. Vivamus in diam vitae felis cursus pharetra in at arcu. Nulla
-                            consectetur neque odio, eget aliquam quam mattis euismod. Sed commodo metus quis leo
-                            bibendum
-                            fringilla.</p>
+                        <p class="text-white bloco-out">Com o visual moderno e agradável, a Space Comic foi pensada para a melhoria ao acesso as HQ's, tendo em vista a dificuldade de encontrar as mesmas. Trazendo assim a vasta lista da Marvel para o consumo gratuito.</p>
                         <br>
                         <br>
                         <br>
@@ -101,39 +86,34 @@
                             </div>
                             <div class="col-md-4 mx-5 my-5 rounded shadow integrante">
                                 <h3 class="text-white" id="nome-integrante">NOME</h3>
-                                <img src="img/modo-anonimo.png" alt="Integrante" width="200" height="200"
+                                <img src="img/Caio2.png" alt="Integrante" width="200" height="200"
                                     class="imagem-int">
-                                <p class="text-white">uis eu nisi ullamcorper lorem consectetur pulvinar et at arcu.
-                                    Maecenas ac rhoncus
-                                    ex. Suspendisse potenti. Suspendisse porta non massa tincidunt scelerisque. Integer
-                                    sagittis nisl at eleifen</p>
-                                <a href="#" class="px-2 pb-2"><img src="img/linkedin.png" alt="" width="30"
+                                <p class="text-white">"Caio Cesar é novo na área da programação, porém com conhecimentos avançados em manutenção de computadores,
+                                    sendo da área de informática por dois anos no Exército Brasileiro."</p>
+                                <a href="https://www.linkedin.com/in/caio-bispo-6b2a561a3/" class="px-2 pb-2"><img src="img/linkedin.png" alt="" width="30"
                                         height="30" class="social-media"></a>
-                                <a href="#" class="px-2 pb-2"><img src="img/git.png" alt="" width="30" height="30" class="social-media"></a>
+                                <a href="https://github.com/CaioCSB" class="px-2 pb-2"><img src="img/git.png" alt="" width="30" height="30" class="social-media"></a>
                             </div>
                             <div class="col-md-4 mx-5 my-5 rounded shadow integrante">
                                 <h3 class="text-white" id="nome-integrante">NOME</h3>
-                                <img src="img/modo-anonimo.png" alt="Integrante" width="200" height="200"
+                                <img src="img/aline2.png" alt="Integrante" width="200" height="200"
                                     class="imagem-int">
-                                <p class="text-white">uis eu nisi ullamcorper lorem consectetur pulvinar et at arcu.
-                                    Maecenas ac rhoncus
-                                    ex. Suspendisse potenti. Suspendisse porta non massa tincidunt scelerisque. Integer
-                                    sagittis nisl at eleifen</p>
-                                <a href="#" class="px-2 pb-2"><img src="img/linkedin.png" alt="" width="30"
+                                <p class="text-white">"Aline Pereira, formada no curso técnico de desenvolvimento de sistemas em 2016, cursou 1 semestre e meio de enfermagem,
+                                    mas se reencontrou na programação em 2020. Possuí conhecimento nas tecnologias front-end HTML, CSS, JavaScript, SASS e na plataforma VTEX. 
+                                    Em busca sempre de novos conhecimentos e ficar por dentro das tecnologias que estão em alta no mercado."</p>
+                                <a href="https://www.linkedin.com/in/aline-pereira010/" class="px-2 pb-2"><img src="img/linkedin.png" alt="" width="30"
                                         height="30" class="social-media"></a>
-                                <a href="#" class="px-2 pb-2"><img src="img/git.png" alt="" width="30" height="30" class="social-media"></a>
+                                <a href="https://github.com/aline-pereira"" class="px-2 pb-2"><img src="img/git.png" alt="" width="30" height="30" class="social-media"></a>
                             </div>
                             <div class="col-md-4 mx-5 my-4 rounded shadow integrante">
                                 <h3 class="text-white" id="nome-integrante">NOME</h3>
-                                <img src="img/modo-anonimo.png" alt="Integrante" width="200" height="200"
+                                <img src="img/Mene2.png" alt="Integrante" width="200" height="200"
                                     class="imagem-int">
-                                <p class="text-white">uis eu nisi ullamcorper lorem consectetur pulvinar et at arcu.
-                                    Maecenas ac rhoncus
-                                    ex. Suspendisse potenti. Suspendisse porta non massa tincidunt scelerisque. Integer
-                                    sagittis nisl at eleifen</p>
-                                    <a href="#" class="px-2 pb-2"><img src="img/linkedin.png" alt=""
+                                <p class="text-white">"Mateus Menezes 20 anos, iniciante no mundo de programação descobriu a programação através do curso
+                                     de front end coding da Digital House, sempre aprendendo coisas novas e correndo atras de melhorar como programador."</p>
+                                    <a href="https://www.linkedin.com/in/mateus-menezes-377703122/" class="px-2 pb-2"><img src="img/linkedin.png" alt=""
                                             width="30" height="30" class="social-media"></a>
-                                    <a href="#" class="px-2 pb-2"><img src="img/git.png" alt="" width="30"
+                                    <a href="https://github.com/MeneMateus" class="px-2 pb-2"><img src="img/git.png" alt="" width="30"
                                             height="30" class="social-media"></a>
                             </div>
                             <div class="col-md-4 mx-5 my-5 px-4 rounded shadow integrante">
