Consumo da API finalizado

--- a/Space_Comics - Copia/index.html
+++ b/Space_Comics - Copia/index.html
@@ -66,17 +66,17 @@
                     <h1 id="titleHQ">SuperMan - The Death of Superman!</h1>
                     <p class="d-inline details">Outubro de 1993 •</p>
                     <p class="d-inline details">160 Páginas •</p>
-                    <p class="d-inline details">DC Comics</p>
+                    <p class="d-inline details">Marvel Studios</p>
                     <br><br>
                     <h2>Sinopse</h2>
-                    <p>
+                    <p id = "p-descricao">
                         Durante sua participação no talk-show de sua amiga Cat Grant, o Super-Homem é informado que um
                         monstro desconhecido está causando problemas no meio-oeste norte-americano. A intervenção da
                         Liga da Justiça da América – da qual é presidente – está se mostrando incapaz de contar o avanço
                         e o rastro de destruição insano da criatura, batizada pelo Gladiador Dourado como Apocalypse.
-                    </p>
+                    </p >
                     <h2>Autores</h2>
-                    <p>
+                    <p id = "p-autores">
                         Roger Stern, Dan Jurgens, Jerry Ordway e Louise Simonson (roteiro) e Dan Jurgens, Tom Grummet,
                         Jon Bogdanove e Jackson Guice(desenhos) Bret Breeding, Dennis Janke, Doug Hazlewood e Denis
                         Rodier (arte-final).
