--- a/sobre.html
+++ b/sobre.html
@@ -85,7 +85,7 @@
                                 <a href="https://github.com/TheusVask" class="px-2 pb-2"><img src="img/git.png" alt="" width="30" height="30" class="social-media"></a>
                             </div>
                             <div class="col-md-4 mx-5 my-5 rounded shadow integrante">
-                                <h3 class="text-white" id="nome-integrante">NOME</h3>
+                                <h3 class="text-white" id="nome-integrante">Caio Cesar</h3>
                                 <img src="img/Caio2.png" alt="Integrante" width="200" height="200"
                                     class="imagem-int">
                                 <p class="text-white">"Caio Cesar é novo na área da programação, porém com conhecimentos avançados em manutenção de computadores,
@@ -95,7 +95,7 @@
                                 <a href="https://github.com/CaioCSB" class="px-2 pb-2"><img src="img/git.png" alt="" width="30" height="30" class="social-media"></a>
                             </div>
                             <div class="col-md-4 mx-5 my-5 rounded shadow integrante">
-                                <h3 class="text-white" id="nome-integrante">NOME</h3>
+                                <h3 class="text-white" id="nome-integrante">Aline Pereira</h3>
                                 <img src="img/aline2.png" alt="Integrante" width="200" height="200"
                                     class="imagem-int">
                                 <p class="text-white">"Aline Pereira, formada no curso técnico de desenvolvimento de sistemas em 2016, cursou 1 semestre e meio de enfermagem,
@@ -106,7 +106,7 @@
                                 <a href="https://github.com/aline-pereira"" class="px-2 pb-2"><img src="img/git.png" alt="" width="30" height="30" class="social-media"></a>
                             </div>
                             <div class="col-md-4 mx-5 my-4 rounded shadow integrante">
-                                <h3 class="text-white" id="nome-integrante">NOME</h3>
+                                <h3 class="text-white" id="nome-integrante">Mateus Menezes</h3>
                                 <img src="img/Mene2.png" alt="Integrante" width="200" height="200"
                                     class="imagem-int">
                                 <p class="text-white">"Mateus Menezes 20 anos, iniciante no mundo de programação descobriu a programação através do curso
