--- a/home.html
+++ b/home.html
@@ -15,8 +15,8 @@
     </script>
     
     <!--Biblioteca slick-->
-    <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <script src="slick/jquery.min.js.js"></script>
 
 
 </head>
@@ -133,10 +133,10 @@
         </footer>
     </section>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js"></script>
+    <script src="slick/gsap.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/api.js"></script>
-    <script type="text/javascript" src="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script type="text/javascript" src="slick/carrossel.min.js"></script>
 
 </body>
 
